fix: adjust button height for better responsiveness on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -95,11 +95,7 @@ main {
 }
 
 @media (max-width: 600px) {
-  main {
-    width: 100vw;
-    min-height: 100dvh;
-    max-width: 100vw;
-    padding-bottom: 80px;
-    position: static;
+  .button {
+    height: calc((100dvh - 3%-10%) / 6);
   }
 }
